5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1621_2933.log
== SUBMITION (2019-04-01 19:07:11) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-ln(Qo))/y
print(r)

-- EXECUTION TIME:
0.183798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2933/main.py", line 6, in <module>
    r= (math.ln(Qf)-ln(Qo))/y
AttributeError: 'module' object has no attribute 'ln'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:07:17) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (math.ln(Qf)-ln(Qo))/y
AttributeError: module 'math' has no attribute 'ln'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:07:45) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-math.ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (math.ln(Qf)-math.ln(Qo))/y
AttributeError: module 'math' has no attribute 'ln'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:02) 
-- CODE:
from math import log
Qo=float(input())
Qf=float(input())
y=int(input())

r= (ln(Qf)-ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (ln(Qf)-ln(Qo))/y
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:25) 
-- CODE:
from math import log(x)
Qo=float(input())
Qf=float(input())
y=int(input())

r= (ln(Qf)-ln(Qo))/y
print(r)

-- ERROR:
File "XXXX", line 1
    from math import log(x)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:50) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (ln(Qf)-ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (ln(Qf)-ln(Qo))/y
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:37) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-math.ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (math.ln(Qf)-math.ln(Qo))/y
AttributeError: module 'math' has no attribute 'ln'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:47) 
-- CODE:

Qo=float(input())
Qf=float(input())
y=int(input())

r= (ln(Qf)-ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (ln(Qf)-ln(Qo))/y
NameError: name 'ln' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:30) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-math.ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (math.ln(Qf)-math.ln(Qo))/y
AttributeError: module 'math' has no attribute 'ln'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:10) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-math.ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (math.ln(Qf)-math.ln(Qo))/y
AttributeError: module 'math' has no attribute 'ln'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:59) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.ln(Qf)-math.ln(Qo))/y
print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (math.ln(Qf)-math.ln(Qo))/y
AttributeError: module 'math' has no attribute 'ln'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:46) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.log(Qf)-math.log(Qo))/y
print(r)

-- OUTPUT:
1.1512925464970225
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:22:58) 
-- CODE:
import math
Qo=float(input())
Qf=float(input())
y=int(input())

r= (math.log(Qf)-math.log(Qo))/y
print(r)

-- EXECUTION TIME:
0.141046
-- TEST CASE 1:
---- input:
100.0
1000.0
2
---- correct output:
1.1512925464970225
---- user output:
1.1512925464970225
-- TEST CASE 2:
---- input:
122.0
3000.5
3
---- correct output:
1.0675043918987706
---- user output:
1.0675043918987706
-- TEST CASE 3:
---- input:
123.4
15000.5
12
---- correct output:
0.4000339751159041
---- user output:
0.4000339751159041
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
